Auth API modified

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -32,8 +32,7 @@
         "socialProviders": [],
         "usernameAttributes": [],
         "signupAttributes": [
-          "EMAIL",
-          "PREFERRED_USERNAME"
+          "EMAIL"
         ],
         "passwordProtectionSettings": {
           "passwordPolicyMinLength": 8,
